--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ img {
   width: 1100px;
   margin: 0 auto;
 }
+@media screen and (max-width: 1199px) {
+  .inner {
+    width: 97%;
+  }
+}
 
 .d--flex {
   display: flex;
@@ -29,7 +34,7 @@ img {
   color: #777;
 }
 .header .contact .contact_inline {
-  color: #ffffff;
+  color: #fff;
   padding: 12px 14px;
   font-size: 12px;
   background-color: #6ba7eb;
@@ -38,51 +43,122 @@ img {
 .header .contact .contact_inline:hover {
   color: #333;
 }
+@media screen and (max-width: 767px) {
+  .header .contact_inline {
+    display: none;
+  }
+}
+
+.nav_toggle {
+  display: none;
+  position: relative;
+  width: 1.75rem;
+  height: 1.5rem;
+}
+.nav_toggle i {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  transition: transform 0.5s, opacity 0.5s;
+}
+.nav_toggle i:nth-child(1) {
+  top: 0;
+}
+.nav_toggle i:nth-child(2) {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+.nav_toggle i:nth-child(3) {
+  bottom: 0;
+}
+@media screen and (max-width: 767px) {
+  .nav_toggle {
+    display: block;
+  }
+}
 
 .keyvisual {
   width: 100%;
 }
 .keyvisual_img {
-  background-image: url(../img/keyvisual/keyvisual.jpg);
-  background-size: cover;
+  background: url(../img/keyvisual/keyvisual.jpg) no-repeat center/cover;
 }
 .keyvisual_copy {
   width: 100%;
   text-align: center;
   padding: 400px 0;
 }
-
-h1 {
+.keyvisual_copy h1 {
   font-size: 65px;
   font-weight: 700;
   color: #6ba7eb;
   margin-bottom: 30px;
 }
-
-.keyvisual_subcopy {
+.keyvisual_copy .keyvisual_subcopy {
   font-size: 40px;
   font-weight: 700;
-  color: #ffffff;
+  color: #fff;
+}
+@media screen and (max-width: 1199px) {
+  .keyvisual_copy {
+    padding: 250px 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .keyvisual_copy {
+    padding: 200px 0;
+  }
+  .keyvisual_copy h1 {
+    font-size: 40px;
+  }
+  .keyvisual_copy .keyvisual_subcopy {
+    font-size: 30px;
+  }
 }
 
 .work {
   background-color: #e3f2fd;
-  padding-top: 50px;
+  padding: 50px 0;
 }
 .work--flex {
   display: flex;
 }
+@media screen and (max-width: 1199px) {
+  .work--flex {
+    display: block;
+    text-align: center;
+  }
+}
 .work .pc_illust_parents {
   width: 40%;
 }
-.work .pc_illust {
-  width: 250px;
-  margin: auto;
+@media screen and (max-width: 1199px) {
+  .work .pc_illust_parents {
+    width: auto;
+  }
 }
 .work .work_catch_copy {
+  width: 60%;
   text-align: center;
   padding-top: 20px;
-  width: 60%;
+}
+.work .work_catch_copy .work_copy {
+  font-size: 40px;
+  letter-spacing: 10px;
+  margin-bottom: 35px;
+}
+.work .work_catch_copy .work_text {
+  font-size: 15px;
+  line-height: 18px;
+  word-break: break-all;
+}
+@media screen and (max-width: 1199px) {
+  .work .work_catch_copy {
+    width: 100%;
+  }
 }
 
 .skills {
@@ -93,11 +169,16 @@ h1 {
   letter-spacing: 10px;
   text-align: center;
 }
-.skills .skills_icon_area {
+.skills_icon_area {
   display: grid;
   gap: 100px;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .skills_icon_area {
+    display: block;
+  }
 }
 .skills .skills_card {
   opacity: 0.7;
@@ -105,6 +186,13 @@ h1 {
 }
 .skills .skills_card:hover {
   opacity: 1;
+}
+@media screen and (max-width: 1199px) {
+  .skills .skills_card {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto 80px;
+  }
 }
 
 .plan {
@@ -125,27 +213,27 @@ h1 {
   text-align: center;
   font-size: 16px;
   line-height: 26px;
+  background-color: #e3f2fd;
+  border-left: 2px solid #fff;
   padding: 10px;
+}
+.plan table th:first-child, .plan table td:first-child {
+  border-left: none;
 }
 .plan table th {
   background-color: #6ba7eb;
-  border-left: 2px solid #fff;
 }
-.plan table td {
-  background-color: #e0efff;
-  border-left: 2px solid #fff;
-}
-
-.plan_heading {
-  font-weight: bold;
-}
-
-tr:nth-of-type(odd) td {
+.plan table tr:nth-of-type(odd) td {
   background-color: #f9f9f9;
 }
-
-tr > *:first-child {
-  border-left: none !important;
+.plan table .plan_heading {
+  font-weight: bold;
+}
+@media screen and (max-width: 767px) {
+  .plan table th, .plan table td {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 
 .sns {
@@ -156,6 +244,11 @@ tr > *:first-child {
 .sns_flex {
   display: flex;
   justify-content: center;
+}
+@media screen and (max-width: 767px) {
+  .sns_flex {
+    display: block;
+  }
 }
 .sns_icon {
   width: 185px;
@@ -169,83 +262,22 @@ tr > *:first-child {
 .sns_icon:hover {
   background-color: #fff;
 }
+@media screen and (max-width: 767px) {
+  .sns_icon {
+    width: 100%;
+    padding: 50px 0;
+  }
+}
 
 footer {
   background-color: #cfd8dc;
   padding: 20px 0;
 }
-footer .footer_flex {
+footer_flex {
   display: flex;
   justify-content: end;
 }
-footer .footer_copy {
+footer_copy {
   font-size: 10px;
   letter-spacing: 0.5px;
-}
-
-@media screen and (max-width: 1199px) {
-  .inner {
-    width: 97%;
-  }
-  .keyvisual_copy {
-    padding: 250px 0;
-  }
-  .work--flex {
-    display: block;
-    justify-content: center;
-  }
-  .skills_icon_area {
-    display: block;
-  }
-  .skills_card {
-    width: 300px;
-    height: 300px;
-    margin: auto;
-  }
-}
-@media screen and (max-width: 767px) {
-  .inner {
-    width: 97%;
-  }
-  .contact_inline {
-    display: none;
-  }
-  .nav_toggle {
-    display: block;
-    width: 1.75rem;
-    height: 1.5rem;
-    position: relative;
-  }
-  .nav_toggle i {
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #333;
-    position: absolute;
-    transition: transform 0.5s, opacity 0.5s;
-  }
-  .nav_toggle i:nth-child(1) {
-    top: 0;
-  }
-  .nav_toggle i:nth-child(2) {
-    top: 0;
-    bottom: 0;
-    margin: auto;
-  }
-  .nav_toggle i:nth-child(3) {
-    bottom: 0;
-  }
-  h1 {
-    font-size: 40px;
-  }
-  .keyvisual_subcopy {
-    font-size: 30px;
-  }
-  .sns {
-    padding: 50px 0;
-  }
-  .sns_icon {
-    width: 100%;
-    padding: 50px 0;
-  }
 }/*# sourceMappingURL=style.css.map */
