--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,23 @@
 @charset "utf-8";
 
+// 変数定義
+$main-color: #6ba7eb;
+$bg-light: #e3f2fd;
+$bg-dark: #cfd8dc;
+$white: #fff;
+$text-dark: #333;
+$text-gray: #777;
+$text-light-gray: #8c8c8c;
+$transition: all 0.3s ease;
+
+// Mixin（レスポンシブ対応）
+@mixin mq($size) {
+  @media screen and (max-width: $size) {
+    @content;
+  }
+}
+
+// 基本スタイル
 a {
   text-decoration: none;
 }
@@ -12,6 +30,10 @@ img {
 .inner {
   width: 1100px;
   margin: 0 auto;
+
+  @include mq(1199px) {
+    width: 97%;
+  }
 }
 
 .d--flex {
@@ -20,82 +42,162 @@ img {
   align-items: center;
 }
 
+// ヘッダー
 .header {
-  background: #fff;
+  background: $white;
   position: sticky;
   top: 0;
   z-index: 1;
   padding: 15px 0;
 
   &_logo {
-    color: #777;
+    color: $text-gray;
   }
 
   .contact {
     .contact_inline {
-      color: #ffffff;
+      color: $white;
       padding: 12px 14px;
       font-size: 12px;
-      background-color: #6ba7eb;
-      transition: all 0.3s ease;
+      background-color: $main-color;
+      transition: $transition;
+
       &:hover {
-        color: #333;
+        color: $text-dark;
       }
+    }
+  }
+
+  @include mq(767px) {
+    .contact_inline {
+      display: none;
     }
   }
 }
 
+// ハンバーガーメニュー
+.nav_toggle {
+  display: none;
+  position: relative;
+  width: 1.75rem;
+  height: 1.5rem;
+
+  i {
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: $text-dark;
+    position: absolute;
+    transition: transform 0.5s, opacity 0.5s;
+
+    &:nth-child(1) {
+      top: 0;
+    }
+    &:nth-child(2) {
+      top: 0;
+      bottom: 0;
+      margin: auto;
+    }
+    &:nth-child(3) {
+      bottom: 0;
+    }
+  }
+
+  @include mq(767px) {
+    display: block;
+  }
+}
+
+// キービジュアル
 .keyvisual {
   width: 100%;
+
   &_img {
-    background-image: url(../img/keyvisual/keyvisual.jpg);
-    background-size: cover;
+    background: url(../img/keyvisual/keyvisual.jpg) no-repeat center/cover;
   }
 
   &_copy {
     width: 100%;
     text-align: center;
     padding: 400px 0;
+
+    h1 {
+      font-size: 65px;
+      font-weight: 700;
+      color: $main-color;
+      margin-bottom: 30px;
+    }
+
+    .keyvisual_subcopy {
+      font-size: 40px;
+      font-weight: 700;
+      color: $white;
+    }
+
+    @include mq(1199px) {
+      padding: 250px 0;
+    }
+
+    @include mq(767px) {
+      padding: 200px 0;
+
+      h1 {
+        font-size: 40px;
+      }
+
+      .keyvisual_subcopy {
+        font-size: 30px;
+      }
+    }
   }
 }
 
-h1 {
-  font-size: 65px;
-  font-weight: 700;
-  color: #6ba7eb;
-  margin-bottom: 30px;
-}
-
-.keyvisual_subcopy {
-  font-size: 40px;
-  font-weight: 700;
-  color: #ffffff;
-}
-
+// WORKセクション
 .work {
-  background-color: #e3f2fd;
-  padding-top: 50px;
+  background-color: $bg-light;
+  padding: 50px 0;
 
   &--flex {
     display: flex;
+
+    @include mq(1199px) {
+      display: block;
+      text-align: center;
+    }
   }
 
   .pc_illust_parents {
     width: 40%;
-  }
 
-  .pc_illust {
-    width: 250px;
-    margin: auto;
+    @include mq(1199px) {
+      width: auto;
+    }
   }
 
   .work_catch_copy {
+    width: 60%;
     text-align: center;
     padding-top: 20px;
-    width: 60%;
+
+    .work_copy {
+      font-size: 40px;
+      letter-spacing: 10px;
+      margin-bottom: 35px;
+    }
+
+    .work_text {
+      font-size: 15px;
+      line-height: 18px;
+      word-break: break-all;
+    }
+
+    @include mq(1199px) {
+      width: 100%;
+    }
   }
 }
 
+// SKILLSセクション
 .skills {
   padding: 50px 0 70px;
 
@@ -105,22 +207,34 @@ h1 {
     text-align: center;
   }
 
-  .skills_icon_area {
+  &_icon_area {
     display: grid;
     gap: 100px;
     grid-template-columns: repeat(3, 1fr);
     margin-top: 50px;
+
+    @include mq(1199px) {
+      display: block;
+    }
   }
 
   .skills_card {
     opacity: 0.7;
     transition: all 0.7s ease;
+
     &:hover {
       opacity: 1.0;
+    }
+
+    @include mq(1199px) {
+      width: 300px;
+      height: 300px;
+      margin: 0 auto 80px;
     }
   }
 }
 
+// PLANセクション
 .plan {
   background-color: #d0dfea;
   padding: 50px 0;
@@ -135,62 +249,79 @@ h1 {
   table {
     width: 100%;
     table-layout: fixed;
+
     th, td {
       text-align: center;
       font-size: 16px;
       line-height: 26px;
+      background-color: $bg-light;
+      border-left: 2px solid $white;
       padding: 10px;
+
+      &:first-child {
+        border-left: none;
+      }
     }
+
     th {
-      background-color: #6ba7eb;
-      border-left: 2px solid #fff;
+      background-color: $main-color;
     }
-    td {
-      background-color: #e0efff;
-      border-left: 2px solid #fff;
+
+    tr:nth-of-type(odd) td {
+      background-color: #f9f9f9;
+    }
+
+    .plan_heading {
+      font-weight: bold;
+    }
+
+    @include mq(767px) {
+      th, td {
+        font-size: 14px;
+        line-height: 22px;
+      }
     }
   }
 }
 
-.plan_heading {
-  font-weight: bold;
-}
-
-tr:nth-of-type(odd) td {
-  background-color:  #f9f9f9;
-}
-
-tr > *:first-child {
-  border-left: none !important;
-}
-
-
+// SNSセクション
 .sns {
   padding: 200px 0;
-  background-color: #e3f2fd;
+  background-color: $bg-light;
   pointer-events: none;
 
   &_flex {
     display: flex;
     justify-content: center;
+
+    @include mq(767px) {
+      display: block;
+    }
   }
 
   &_icon {
     width: 185px;
     padding: 25px 0;
-    color: #8c8c8c;
+    color: $text-light-gray;
     font-size: 40px;
     text-align: center;
     pointer-events: auto;
     transition: all 0.5s ease;
+
     &:hover {
-      background-color: #fff;
+      background-color: $white;
+    }
+
+    @include mq(767px) {
+      width: 100%;
+      padding: 50px 0;
     }
   }
 }
 
+// フッター
 footer {
-  background-color: #cfd8dc;
+  background-color: $bg-dark;
   padding: 20px 0;
 
   .footer_flex {
@@ -201,65 +332,5 @@ footer {
   .footer_copy {
     font-size: 10px;
     letter-spacing: 0.5px;
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .inner {
-    width: 97%;
-  }
-  .keyvisual_copy {
-    padding: 250px 0;
-  }
-  .work--flex {
-    display: block;
-    justify-content: center;
-  }
-  .skills_icon_area {
-    display: block;
-  }
-  .skills_card {
-    width: 300px;
-    height: 300px;
-    margin: auto;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .inner {
-    width: 97%;
-  }
-  .contact_inline {
-    display: none;
-  }
-  .nav_toggle {
-    display: block;
-    width: 1.75rem;
-    height: 1.5rem;
-    position: relative;
-    i {
-      display: block;
-      width: 100%;
-      height: 2px;
-      background-color: #333;
-      position: absolute;
-      transition: transform .5s, opacity .5s;
-      &:nth-child(1) { top: 0; }
-      &:nth-child(2) { top: 0; bottom: 0; margin: auto; }
-      &:nth-child(3) { bottom: 0; }
-    }
-  }
-  h1 {
-    font-size: 40px;
-  }
-  .keyvisual_subcopy {
-    font-size: 30px;
-  }
-  .sns {
-    padding: 50px 0;
-  }
-  .sns_icon {
-    width: 100%;
-    padding: 50px 0;
   }
 }
