--- a/css/style.scss
+++ b/css/style.scss
@@ -10,10 +10,40 @@ $text-gray: #777;
 $text-light-gray: #8c8c8c;
 $transition: all 0.3s ease;
 
+$breakpoints: (
+  "xl": 1199px,
+  "lg": 991px,
+  "md": 767px,
+  "sm": 575px
+);
+
 // Mixin（レスポンシブ対応）
-@mixin mq($size) {
-  @media screen and (max-width: $size) {
+@mixin mq($size: "md") {
+  @media screen and (max-width: map-get($breakpoints, $size)) {
     @content;
+  }
+}
+
+// 見出し共通スタイル
+.heading-primary {
+  font-size: 65px;
+  font-weight: 700;
+  color: $main-color;
+  margin-bottom: 30px;
+
+  @include mq("md") {
+    font-size: 40px;
+  }
+}
+
+.heading-secondary {
+  font-size: 40px;
+  font-weight: 700;
+  letter-spacing: 10px;
+  text-align: center;
+
+  @include mq("md") {
+    font-size: 30px;
   }
 }
 
@@ -31,7 +61,7 @@ img {
   width: 1100px;
   margin: 0 auto;
 
-  @include mq(1199px) {
+  @include mq("xl") {
     width: 97%;
   }
 }
@@ -68,7 +98,7 @@ img {
     }
   }
 
-  @include mq(767px) {
+  @include mq("md") {
     .contact_inline {
       display: none;
     }
@@ -103,7 +133,7 @@ img {
     }
   }
 
-  @include mq(767px) {
+  @include mq("md") {
     display: block;
   }
 }
@@ -119,7 +149,9 @@ img {
   &_copy {
     width: 100%;
     text-align: center;
-    padding: 400px 0;
+    padding-top: 400px;
+    padding-bottom: 400px;
+  }
 
     h1 {
       font-size: 65px;
@@ -134,33 +166,24 @@ img {
       color: $white;
     }
 
-    @include mq(1199px) {
+    @include mq("xl") {
       padding: 250px 0;
     }
 
-    @include mq(767px) {
+    @include mq("md") {
       padding: 200px 0;
-
-      h1 {
-        font-size: 40px;
-      }
-
-      .keyvisual_subcopy {
-        font-size: 30px;
-      }
     }
-  }
 }
 
 // WORKセクション
 .work {
   background-color: $bg-light;
-  padding: 50px 0;
+  padding-top: 50px;
 
   &--flex {
     display: flex;
 
-    @include mq(1199px) {
+    @include mq("xl") {
       display: block;
       text-align: center;
     }
@@ -169,15 +192,24 @@ img {
   .pc_illust_parents {
     width: 40%;
 
-    @include mq(1199px) {
+    @include mq("xl") {
       width: auto;
+    }
+
+    .pc_illust {
+      width: 250px;
+      margin: auto; // 画像の中央配置
     }
   }
 
   .work_catch_copy {
-    width: 60%;
     text-align: center;
     padding-top: 20px;
+    width: 60%;
+
+    @include mq("xl") {
+      width: 100%;
+    }
 
     .work_copy {
       font-size: 40px;
@@ -190,12 +222,12 @@ img {
       line-height: 18px;
       word-break: break-all;
     }
-
-    @include mq(1199px) {
-      width: 100%;
-    }
   }
+  @include mq("xl") {
+    width: 100%;
+  };
 }
+
 
 // SKILLSセクション
 .skills {
@@ -213,7 +245,7 @@ img {
     grid-template-columns: repeat(3, 1fr);
     margin-top: 50px;
 
-    @include mq(1199px) {
+    @include mq("xl") {
       display: block;
     }
   }
@@ -226,7 +258,7 @@ img {
       opacity: 1.0;
     }
 
-    @include mq(1199px) {
+    @include mq("xl") {
       width: 300px;
       height: 300px;
       margin: 0 auto 80px;
@@ -275,7 +307,7 @@ img {
       font-weight: bold;
     }
 
-    @include mq(767px) {
+    @include mq("md") {
       th, td {
         font-size: 14px;
         line-height: 22px;
@@ -294,7 +326,7 @@ img {
     display: flex;
     justify-content: center;
 
-    @include mq(767px) {
+    @include mq("md") {
       display: block;
     }
   }
@@ -312,7 +344,7 @@ img {
       background-color: $white;
     }
 
-    @include mq(767px) {
+    @include mq("md") {
       width: 100%;
       padding: 50px 0;
     }
@@ -333,4 +365,4 @@ footer {
     font-size: 10px;
     letter-spacing: 0.5px;
   }
-}
+};
