--- a/css/style.scss
+++ b/css/style.scss
@@ -339,6 +339,16 @@ h1 {
   background-color: $bg-light;
   pointer-events: none;
 
+  @include mq("xl"){
+    padding: 150px 0;
+  }
+  @include mq("md"){
+    padding: 100px 0;
+  }
+  @include mq("sm"){
+    padding: 50px 0;
+  }
+
   &-flex {
     display: flex;
     justify-content: center;
@@ -360,7 +370,6 @@ h1 {
     &:hover {
       background-color: $white;
     }
-
     @include mq {
       width: 100%;
       padding: 50px 0;
